# AI_ARCH

./: .clinerules  .cursorrules  .env.example  .gitignore  AGENTS.md  AGENT_CODE_DERIVED_PROMPT.md  AGENT_ORCHESTRATION.md  BUILD_PROCESS.md  CLAUDE.md  DECISIONS.md  DOPEJAR_ARCHITECTURE.md  GEMINI.md  HOWTO_USE.md  HRM_INTERFACE_SPECS.md  IMPLEMENTATION_ORDER.md  MEMORY_BUS_ARCHITECTURE.md  MORNING.md  README.md  RETROSPECTIVE_FEEDBACK_EXTENSION.md  SESSION_HANDOFF.md  SPEC.md  SYSTEM_CONSTITUTION.md  TEST_SPECIFICATIONS.md  TRACING_DESIGN.md  WHAT_WENT_WRONG.md  boot.py  capabilities_v2.csv  proof_of_life.txt  review.py  run.sh  setup_hrm.sh  test_l2_fastlane.py  test_write_windows.md
.github/: copilot-instructions.md
Control_Plane/: CLAUDE.md  CONTROL_PLANE_SPEC.md  HOWTO_USE.md  MANIFEST.json  README.md  boot_os_registry.csv  cp.py
_Prompt-Cache_/: Claude_Add_Pty_Support.md  Claude_Adherence_Test.md  Claude_Adherence_Test_Response.md  (+15 more)
_archive/2026-01-14_repo-archive_v1/locked_system/: .gitignore  CONTRIBUTING.md  config.py  main.py  notes.py  pyproject.toml  setup.py
_archive/2026-01-14_repo-archive_v1/locked_system/.github/workflows/: tests.yml
_archive/2026-01-14_repo-archive_v1/locked_system/agents/: loader.py
_archive/2026-01-14_repo-archive_v1/locked_system/capabilities/memory_write/: __init__.py
_archive/2026-01-14_repo-archive_v1/locked_system/cli/: chat_ui.py
_archive/2026-01-14_repo-archive_v1/locked_system/core/execution/: hrm.py
_archive/2026-01-14_repo-archive_v1/locked_system/core/governance/: __init__.py
_archive/2026-01-14_repo-archive_v1/locked_system/core/policy/: __init__.py
_archive/2026-01-14_repo-archive_v1/locked_system/executor/: __init__.py  gates.py
_archive/2026-01-14_repo-archive_v1/locked_system/fast_loop/: continuous_eval.py
_archive/2026-01-14_repo-archive_v1/locked_system/lanes/: models.py
_archive/2026-01-14_repo-archive_v1/locked_system/signals/: collector.py
_archive/2026-01-14_repo-archive_v1/locked_system/slow_loop/: stance.py
_archive/2026-01-14_repo-archive_v1/locked_system/tests/: test_agents.py  test_core_learning.py  test_tools.py
_archive/2026-01-14_repo-archive_v1/locked_system/tools/: decision.py  runtime.py
(+869 files in other folders)
